--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,7 @@
         }
     },
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "5.4.x-dev"
+    }
 }
